white spaces fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,13 @@ body {
   font-size: 1.8rem;
 }
 
+.MyriadValoresXl2 {
+  font-family: "Myriad", sans-serif;
+  font-weight: 400;
+  color: #20361e;
+  font-size: 2.5rem;
+}
+
 .MyriadValoresMobile {
   font-family: "Myriad", sans-serif;
   font-weight: 400;
